force-app/main/default/objects/B25__Resource_Type__c/B25__Resource_Type__c.object-meta.xml
<CustomObject>
    <description>The type of a Resource contains a number of settings that will be shared across all Resources of this type.</description>
    <label>Resource Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>