force-app/main/default/objects/B25__Resource_Type__c/fields/B25__AllowDoubleBookings__c.field-meta.xml
<CustomField>
    <fullName>B25__AllowDoubleBookings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow double bookings in Resources of this type?</description>
    <inlineHelpText>Autoriser les réservations doubles dans les ressources de ce type ?</inlineHelpText>
    <label>Allow Double Bookings</label>
    <type>Checkbox</type>
</CustomField>