force-app/main/default/objects/B25__Resource_Type__c/fields/B25__Availability_Defined_At__c.field-meta.xml
<CustomField>
    <fullName>B25__Availability_Defined_At__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Resource Type from which Resources of this type will inherit their Availability.</description>
    <inlineHelpText>Le type de ressource dont les ressources de ce type hériteront de leur disponibilité.</inlineHelpText>
    <label>Availability Defined At</label>
    <referenceTo>B25__Resource_Type__c</referenceTo>
    <relationshipLabel>ResourceTypes (Availability Defined At)</relationshipLabel>
    <relationshipName>Availability_Children</relationshipName>
    <type>Lookup</type>
</CustomField>