force-app/main/default/objects/B25__Resource_Type__c/fields/B25__DayCapacityCalculation__c.field-meta.xml
<CustomField>
    <fullName>B25__DayCapacityCalculation__c</fullName>
    <description>Binary counts a Resource as occupied if there is a Reservation that doesn&apos;t end on that day. Percentual uses occupied time divided by total available time in a day.</description>
    <inlineHelpText>« Binaire » compte une ressource comme occupée s’il y a une réservation qui ne se termine pas ce jour-là. « Poucentage » utilise le temps occupé divisé par le temps total disponible dans une journée.</inlineHelpText>
    <label>Day Capacity Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentual</fullName>
            </value>
            <value>
                <fullName>Binary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>