force-app/main/default/objects/B25__Resource_Type__c/fields/B25__Default_Price__c.field-meta.xml
<CustomField>
    <fullName>B25__Default_Price__c</fullName>
    <description>This is the default base price for Resources of this Type, as used in the price calculation for Reservations.</description>
    <inlineHelpText>Il s’agit du prix de base par défaut pour les ressources de ce type, tel qu’il est utilisé dans le calcul du prix pour les réservations.</inlineHelpText>
    <label>Default Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>