force-app/main/default/objects/B25__Resource_Type__c/fields/B25__Default_Price_Calculation__c.field-meta.xml
<CustomField>
    <fullName>B25__Default_Price_Calculation__c</fullName>
    <description>Determines the default way the price is calculated for all Resources of the Resource Type.</description>
    <inlineHelpText>Lorsque vous choisissez une méthode, toutes les ressources de ce type de ressource utiliseront cette méthode de calcul du prix par défaut.</inlineHelpText>
    <label>Default Price Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PER_PERSON</fullName>
            </value>
            <value>
                <fullName>PER_TIME_UNIT</fullName>
            </value>
            <value>
                <fullName>PER_PERSON_PER_TIME_UNIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>