force-app/main/default/objects/B25__Resource_Type__c/fields/B25__Default_Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Default_Reservation_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Reservation type that wil be selected by default when creating a new Reservation in a Resource of this type.</description>
    <inlineHelpText>Le type de réservation qui sera sélectionné par défaut lors de la création d’une nouvelle réservation dans une ressource de ce type.</inlineHelpText>
    <label>Default Reservation Type</label>
    <referenceTo>B25__Reservation_Type__c</referenceTo>
    <relationshipLabel>Resource Types</relationshipLabel>
    <relationshipName>Resource_Types</relationshipName>
    <type>Lookup</type>
</CustomField>