force-app/main/default/objects/B25__Resource_Type__c/fields/B25__Icon__c.field-meta.xml
<CustomField>
    <fullName>B25__Icon__c</fullName>
    <description>The icon that will be displayed for all Resources of this specific Resource Type.</description>
    <inlineHelpText>L’icône qui sera affichée pour toutes les ressources de ce type de ressource spécifique.</inlineHelpText>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>