force-app/main/default/objects/B25__Resource_Type__c/fields/B25__MonthViewInfo__c.field-meta.xml
<CustomField>
    <fullName>B25__MonthViewInfo__c</fullName>
    <label>Month View Info</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Title__c</fullName>
            </value>
            <value>
                <fullName>Account__r.Name</fullName>
                <default>true</default>
                <label>Account__r.Name</label>
            </value>
            <value>
                <fullName>Contact__r.Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>