force-app/main/default/objects/B25__Resource_Type__c/fields/B25__Parent__c.field-meta.xml
<CustomField>
    <fullName>B25__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Resource Type under which this type belongs in the type hierarchy.</description>
    <inlineHelpText>Le type de ressource sous lequel ce type appartient dans la hiérarchie des types.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>B25__Resource_Type__c</referenceTo>
    <relationshipLabel>ResourceTypes (Parent)</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>