force-app/main/default/objects/B25__Resource_Type__c/fields/B25__Plural__c.field-meta.xml
<CustomField>
    <fullName>B25__Plural__c</fullName>
    <description>The plural form of the name. When left blank, an &quot;s&quot; will be appended to the name to get the plural.</description>
    <inlineHelpText>La forme plurielle du nom. Si le champ est laissé vide, un « s » sera ajouté au nom pour obtenir le pluriel.</inlineHelpText>
    <label>Plural</label>
    <length>255</length>
    <type>Text</type>
</CustomField>