force-app/main/default/objects/B25__Resource_Type__c/fields/B25__Rentable__c.field-meta.xml
<CustomField>
    <fullName>B25__Rentable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can Reservations be made for Resources of this type?</description>
    <inlineHelpText>Des réservations peuvent-elles être faites pour des ressources de ce type ?</inlineHelpText>
    <label>Is Reservable</label>
    <type>Checkbox</type>
</CustomField>