force-app/main/default/objects/B25__Resource_Type__c/fields/B25__Use_Full_Availability_Inheritance__c.field-meta.xml
<CustomField>
    <fullName>B25__Use_Full_Availability_Inheritance__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, resources of this type inherit their availabilities from all their ancestors instead of
		only the ancestor defined in the Availability Defined At field.</description>
    <inlineHelpText>Lorsque cette option est cochée, les ressources de ce type héritent leurs disponibilités de tous leurs ancêtres au lieu de seulement l’ancêtre défini dans le champ « Disponibilité définie à ».</inlineHelpText>
    <label>Use Full Availability Inheritance</label>
    <type>Checkbox</type>
</CustomField>