force-app/main/default/objects/B25__Resource_Type__c/listViews/B25__All.listView-meta.xml
<ListView>
    <fullName>B25__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>